<resources>
    <string name="app_name">Atividade</string>
    <string name="telaPrinci">UFMS JOGOS</string>
    <string name="btLogin">Login</string>
    <string name="btCadastrar">Cadastrar</string>
    <string name="btSobre">Sobre</string>
    <string name="txt_login">Logar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="txt_cadastro">Cadastre-se</string>
    <string name="nome_cadast">Nome Completo</string>
    <string name="sexo_cadast">Sexo</string>
    <string name="nasci_cadast">Data de Nascimento</string>
    <string name="telef_cadast">Telefone</string>
    <string name="usuario_cadast">Nome de Usuário</string>
    <string name="senha_cadast">Crie uma Senha</string>
    <string name="txt_sobre">Sobre</string>
    <string name="alunos">Fabricio Gomes e Lucas Fernando</string>
    <string name="rga">202005710048 - 202005710307</string>
    <string name="diciplina">7 semestre de PPDM</string>
    <string name="redirecionar">UFMS</string>
    <string name="pix">PIX:064.017.581-39 e 039.377.541-05</string>
</resources>