<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".cadastro">

    <TextView
        android:id="@+id/txt_cadastro"
        style="@style/titulo_cadastro"
        android:text="@string/txt_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/container_cadastro"
        style="@style/containerCampo_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_cadastro" />

    <EditText
        android:id="@+id/nome_cadast"
        style="@style/Edit_Text"
        android:hint="@string/nome_cadast"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toTopOf="@id/container_cadastro" />

    <EditText
        android:id="@+id/sexo_cadast"
        style="@style/Edit_Text"
        android:hint="@string/sexo_cadast"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toBottomOf="@id/nome_cadast" />

    <EditText
        android:id="@+id/nasci_cadast"
        style="@style/Edit_Text"
        android:hint="@string/nasci_cadast"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toBottomOf="@id/sexo_cadast" />

    <EditText
        android:id="@+id/telef_cadast"
        style="@style/Edit_Text"
        android:hint="@string/telef_cadast"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toBottomOf="@id/nasci_cadast" />

    <EditText
        android:id="@+id/usuario_cadast"
        style="@style/Edit_Text"
        android:hint="@string/usuario_cadast"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toBottomOf="@id/telef_cadast" />

    <EditText
        android:id="@+id/senha_cadast"
        style="@style/Edit_Text"
        android:hint="@string/senha_cadast"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toBottomOf="@id/usuario_cadast" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadasto"
        style="@style/botao"
        android:text="@string/btCadastrar"
        app:layout_constraintEnd_toEndOf="@id/container_cadastro"
        app:layout_constraintStart_toStartOf="@id/container_cadastro"
        app:layout_constraintTop_toBottomOf="@id/senha_cadast" />

</androidx.constraintlayout.widget.ConstraintLayout>