<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".Sobre">

    <TextView
        android:id="@+id/txt_sobre"
        style="@style/titulo_cadastro"
        android:text="@string/txt_sobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/container_sobre"
        style="@style/containerCampo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_sobre" />

    <TextView
        android:id="@+id/sobre"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="Desenvolvedores:"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/container_sobre"
        app:layout_constraintStart_toStartOf="@id/container_sobre"
        app:layout_constraintTop_toTopOf="@id/container_sobre" />

    <TextView
        android:id="@+id/info_sobre"
        style="@style/txt_sobre"
        android:text="@string/alunos"
        app:layout_constraintEnd_toEndOf="@id/container_sobre"
        app:layout_constraintStart_toStartOf="@id/container_sobre"
        app:layout_constraintTop_toBottomOf="@id/sobre" />

    <TextView
        android:id="@+id/info_rga"
        style="@style/txt_sobre"
        android:text="@string/rga"
        app:layout_constraintEnd_toEndOf="@id/container_sobre"
        app:layout_constraintStart_toStartOf="@id/container_sobre"
        app:layout_constraintTop_toBottomOf="@id/info_sobre" />

    <TextView
        android:id="@+id/info_materia"
        style="@style/txt_sobre"
        android:text="@string/diciplina"
        app:layout_constraintEnd_toEndOf="@id/container_sobre"
        app:layout_constraintStart_toStartOf="@id/container_sobre"
        app:layout_constraintTop_toBottomOf="@id/info_rga" />

    <TextView
        android:id="@+id/pix"
        style="@style/txt_sobre"
        android:text="@string/pix"
        app:layout_constraintEnd_toEndOf="@id/container_sobre"
        app:layout_constraintStart_toStartOf="@id/container_sobre"
        app:layout_constraintTop_toBottomOf="@id/info_materia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/redi_ufms"
        style="@style/botao"
        android:drawableLeft="@drawable/ic_ufms"
        android:text="@string/redirecionar"
        app:layout_constraintEnd_toEndOf="@id/container_sobre"
        app:layout_constraintStart_toStartOf="@id/container_sobre"
        app:layout_constraintTop_toBottomOf="@id/pix" />
</androidx.constraintlayout.widget.ConstraintLayout>