<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".login">

    <TextView
        android:id="@+id/txt_login"
        style="@style/titulo_cadastro"
        android:text="@string/txt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/container_login"
        style="@style/containerCampo"
        app:layout_constraintTop_toBottomOf="@id/txt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edit_usuario"
        style="@style/Edit_Text"
        android:hint="@string/usuario"
        android:drawableRight="@drawable/ic_usua"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/container_login"
        app:layout_constraintTop_toTopOf="@id/container_login"
        app:layout_constraintEnd_toEndOf="@id/container_login"
        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edit_usuario"
        app:layout_constraintStart_toStartOf="@id/container_login"
        app:layout_constraintEnd_toEndOf="@id/container_login"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/botao"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>