<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".principal">

    <TextView
        android:id="@+id/textoPrincipal"
        style="@style/titulo_cadastro"
        android:text="@string/telaPrinci"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/controle"
        app:layout_constraintTop_toBottomOf="@id/textoPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/containerCampo"
        style="@style/containerCampo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        style="@style/botao"
        android:text="@string/btLogin"
        app:layout_constraintTop_toTopOf="@id/containerCampo"
        app:layout_constraintStart_toStartOf="@id/containerCampo"
        app:layout_constraintEnd_toEndOf="@id/containerCampo"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCadastrar"
        style="@style/botao"
        android:text="@string/btCadastrar"
        app:layout_constraintTop_toBottomOf="@id/btLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSobre"
        style="@style/botao"
        android:text="@string/btSobre"
        app:layout_constraintTop_toBottomOf="@id/btCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/containerCampo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>